--- a/survey.html
+++ b/survey.html
@@ -8,7 +8,7 @@
   </head>
   <body>
   <h1>Style Survey</h1>
-    <form name="my form" action="file:///Users/gwc/Documents/beauty_app_phonegap/sign_up.html">
+    <form name="my form" action="sign_up.html">
       Are you:
       <select name="genders" id="genders">
         <option value="select">Select</option>
