--- a/survey.html
+++ b/survey.html
@@ -3,8 +3,8 @@
   <html lang = "en">
   <head>
     <title>Survey Form</title>
-    <link rel="stylesheet" href="/Users/gwc/Documents/beauty_app_phonegap/survey.css"/>
-    <script src="/Users/gwc/Documents/beauty_app_phonegap/survey.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="survey.css"/>
+    <script src="survey.js" type="text/javascript"></script>
   </head>
   <body>
   <h1>Style Survey</h1>
