--- a/survey.html
+++ b/survey.html
@@ -3,8 +3,43 @@
   <html lang = "en">
   <head>
     <title>Survey Form</title>
-    <link rel="stylesheet" href="survey.css"/>
     <script src="survey.js" type="text/javascript"></script>
+    <style>
+      body {
+  font-size: 30px
+}
+
+img {
+  display: inline-block;
+}
+
+body {
+  position: absolute;
+  text-align:center;
+  left:25%;
+  right: 25%;
+  background-color: #AFEEEE;
+  border: solid 2px #000080;
+  padding: 50px;
+}
+
+#button {
+
+}
+
+
+#femaleOutfit {
+  transform: scale(2);
+  width: 30px;
+}
+
+#maleOutfit {
+  transform: scale(2);
+  width: 30px;
+}
+</style
+    
+    
   </head>
   <body>
   <h1>Style Survey</h1>
