--- a/survey.html
+++ b/survey.html
@@ -49,33 +49,33 @@
       <br><br>
       <div id="Foutfit">
           If you are a female, which outfit do you like the most:<br>
-          <input type="checkbox" value = "1" name="femaleOutfitOne" id="femaleOutfit1" ><img src="file:///Users/gwc/Documents/beauty_app_phonegap/img/femaleOutfitOne.jpg"
+          <input type="checkbox" value = "1" name="femaleOutfitOne" id="femaleOutfit1" ><img src="img/femaleOutfitOne.jpg"
           style="width:320px;height:450px;"><br>
-          <input type="checkbox" value = "2" name="femaleOutfitTwo" id="femaleOutfit2" ><img src="file:///Users/gwc/Documents/beauty_app_phonegap/img/FemaleOutfitTwo.jpg"
+          <input type="checkbox" value = "2" name="femaleOutfitTwo" id="femaleOutfit2" ><img src="img/FemaleOutfitTwo.jpg"
           style="width:320px;height:400px;"><br>
-          <input type="checkbox" value="3" name="femaleOutfitThree" id="femaleOutfit3" ><img src="file:///Users/gwc/Documents/beauty_app_phonegap/img/femaleOutfitThree.jpg"
+          <input type="checkbox" value="3" name="femaleOutfitThree" id="femaleOutfit3" ><img src="img/femaleOutfitThree.jpg"
           style="width:320px;height:400px;"><br>
-          <input type="checkbox" value="4" name="femaleOutfitFour" id="femaleOutfit4" ><img src="file:///Users/gwc/Documents/beauty_app_phonegap/img/femaleOutfitFour.jpg"
+          <input type="checkbox" value="4" name="femaleOutfitFour" id="femaleOutfit4" ><img src="img/femaleOutfitFour.jpg"
           style="width:320px;height:430px;"><br>
-          <input type="checkbox" value="5" name="femaleOutfitFive" id="femaleOutfit5" ><img src="file:///Users/gwc/Documents/beauty_app_phonegap/img/femaleOutfitFive.jpg"
+          <input type="checkbox" value="5" name="femaleOutfitFive" id="femaleOutfit5" ><img src="img/femaleOutfitFive.jpg"
           style="width:320px;height:450px;"><br>
-          <input type="checkbox" value="6" name="femaleOutfitSix" id="femaleOutfit6" ><img src="file:///Users/gwc/Documents/beauty_app_phonegap/img/femaleOutfitSix.jpg"
+          <input type="checkbox" value="6" name="femaleOutfitSix" id="femaleOutfit6" ><img src="img/femaleOutfitSix.jpg"
           style="width:320px;height:450px;">
       </div>
       <br>
       <div id="Moutfit">
         If you are a male, which outfit do you like the most:<br>
-        <input type="checkbox" value="1" name="maleOutfitOne" id="maleOutfit1" ><img src="file:///Users/gwc/Documents/beauty_app_phonegap/img/maleOutfitOne.jpg"
+        <input type="checkbox" value="1" name="maleOutfitOne" id="maleOutfit1" ><img src="img/maleOutfitOne.jpg"
         style="width:320px;height:400px;"><br>
-        <input type="checkbox" value="2" name="maleOutfitTwo" id="maleOutfit2" ><img src="file:///Users/gwc/Documents/beauty_app_phonegap/img/maleOutfitTwo.jpg"
+        <input type="checkbox" value="2" name="maleOutfitTwo" id="maleOutfit2" ><img src="img/maleOutfitTwo.jpg"
         style="width:320px;height:400px;"><br>
-        <input type="checkbox" value="3" name="maleOutfitThree" id="maleOutfit3" ><img src="file:///Users/gwc/Documents/beauty_app_phonegap/img/maleOutfitThree.jpg"
+        <input type="checkbox" value="3" name="maleOutfitThree" id="maleOutfit3" ><img src="img/maleOutfitThree.jpg"
         style="width:320px;height:400px;"><br>
-        <input type="checkbox" value="4" name="maleOutfitFour" id="maleOutfit4" ><img src="file:///Users/gwc/Documents/beauty_app_phonegap/img/maleOutfitFour.jpg"
+        <input type="checkbox" value="4" name="maleOutfitFour" id="maleOutfit4" ><img src="img/maleOutfitFour.jpg"
         style="width:320px;height:400px;"><br>
-        <input type="checkbox" value="5" name="maleOutfitFive" id="maleOutfit5" ><img src="file:///Users/gwc/Documents/beauty_app_phonegap/img/maleOutfitFive.jpg"
+        <input type="checkbox" value="5" name="maleOutfitFive" id="maleOutfit5" ><img src="img/maleOutfitFive.jpg"
         style="width:320px;height:400px;"><br>
-        <input type="checkbox" value="6" name="maleOutfitSix" id="maleOutfit6" ><img src="file:///Users/gwc/Documents/beauty_app_phonegap/img/maleOutfitSix.jpg"
+        <input type="checkbox" value="6" name="maleOutfitSix" id="maleOutfit6" ><img src="img/maleOutfitSix.jpg"
         style="width:320px;height:400px;">
       </div>
 
