--- a/Beu+y/www/index.html
+++ b/Beu+y/www/index.html
@@ -677,7 +677,7 @@ h3, h4 {
     <div class="row text-center">
       </div>
       <div class="col-sm-4">
-        <form name="my form" action="../..//survey.html">
+        <form name="my form" action="../../survey.html">
           <button class="btn" id="survey">Take Our Survey</button>
 
       </div>
