--- a/sign_up.html
+++ b/sign_up.html
@@ -60,7 +60,7 @@ button {
 
 <h2>Signup Form</h2>
 
-<form action="file:///Users/gwc/Documents/beauty_app_phonegap/Beu+y/www/index.html#tour" style="border:1px solid #ccc">
+<form action="Beu%2By/www/index.htmlindex.html#tour" style="border:1px solid #ccc">
   <div id="container">
       <label><b>Email</b></label>
       <input type="text" placeholder="Enter Email" name="email" id="email" required>
