--- a/sign_up.html
+++ b/sign_up.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="/Users/gwc/Documents/beauty_app/sign_up.js" type="text/javascript"></script>
+  <script src="sign_up.js" type="text/javascript"></script>
 </head>
 <style>
 /* Full-width input fields */
@@ -60,7 +60,7 @@ button {
 
 <h2>Signup Form</h2>
 
-<form action="Beu%2By/www/index.htmlindex.html#tour" style="border:1px solid #ccc">
+<form action="Beu%2By/www/index.html" style="border:1px solid #ccc">
   <div id="container">
       <label><b>Email</b></label>
       <input type="text" placeholder="Enter Email" name="email" id="email" required>
