--- a/Beu+y/www/index.html
+++ b/Beu+y/www/index.html
@@ -216,10 +216,10 @@ h3, h4 {
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
           <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/Users/gwc/Documents/beauty_app_phonegap/men.html">Men</a></li>
-            <li><a href="/Users/gwc/Documents/beauty_app_phonegap/pluswomen.html">Plus Size Women</a></li>
-            <li><a href="/Users/gwc/Documents/beauty_app_phonegap/plusmen.html">Plus Size Men</a></li>
-            <li><a href="/Users/gwc/Documents/beauty_app_phonegap/religion.html">People of Religion</a></li>
+            <li><a href="../../men.html">Men</a></li>
+            <li><a href="../../pluswomen.html">Plus Size Women</a></li>
+            <li><a href="../../plusmen.html">Plus Size Men</a></li>
+            <li><a href="../../religion.html">People of Religion</a></li>
           </ul>
         </li>
       </ul>
